# pyAPI_test

./: README.md
project_DRF_API/: pyproject.toml
project_DRF_API/api_app/: models.py  urls.py
project_DRF_API/api_app/migrations/: 0001_initial.py
project_DRF_API/api_project/: settings.py
project_FAST-API/: pyproject.toml
project_FAST-API/src/: main.py  routers.py
project_drfapi/: db.sqlite3
project_drfapi/api_app/: serializers.py
project_drfapi/api_project/: urls.py
