[tool.poetry]
name = "project-drfapi"
version = "0.1.0"
description = ""
authors = ["prata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^24.8.0"
fastapi = "^0.115.0"
django-db = "^0.0.7"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
markdown = "^3.7"
coreapi = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
