[tool.poetry]
name = "project-fastapi"
version = "0.1.0"
description = ""
authors = ["prata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^24.8.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
